--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-redis": "^2.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
-    "node-fetch": "^3.2.3",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15"
   }
 }
